test/parse/empty-file.txt
;;; ERROR: 1
;; empty file
(;; STDERR ;;;
out/test/parse/empty-file.txt:3:2: error: unexpected token "EOF", expected a module field or a command.
;;; STDERR ;;)
